--- a/index.html
+++ b/index.html
@@ -1,81 +1,90 @@
-<?php
-  $hostname="localhost";
-  $db="データベース名";
-  $Username="ユーザー名";
-  $Password="パスワード";
-
-  $conn = mysqli_connect($hostname, $Username, $Password, $db) Or DIR ("データベース接続エラーです。。。");
-
-  if(isset($_POST['submit'])){
-    $user = $_POST['user'];
-    $comment = $_POST['comment'];
-    $sqlQuery="Insert into input(user, comment) Values('$user','$comment')";
-
-    if (mysqli_query($conn, $sqlQuery))
-    {
-      echo "送信完了";
-    }
-    else {
-      echo "送信失敗";
-    }
-  }
-?>
-
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Progate</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-  <form method="post">
-    <h1>入力機能デモ</h1>
-    <p>試しにコメントしてみて下さい</p>
-    <hr>
-    <table>
-      <tr>
-        <td>お名前</td>
-        <td><input type="text" name="user"></td>
-      </tr>
-      <tr>
-        <td>コメント</td>
-        <td><textarea name="comment"></textarea></td>
-      </tr>
-    </table>
-    <input type="submit" name="submit" value="送信">
-  </form>
-  <hr>
-
-  <h2>コメント履歴</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>ユーザー</th>
-            <th>コメント</th>
-      </tr>
-    </thead>
-    <tbody>
-      <?php
-      $conn = mysqli_connect($hostname, $Username, $Password, $db);
-      if($qry = mysqli_query($conn,"SELECT * FROM input")){
-      while($show = mysqli_fetch_assoc($qry)){
-        echo "<tr>";
-          echo "<td>".$show['user']."</td>";
-          echo "<td>".$show['comment']."</td>";
-        echo "</tr>";
-      }
-      }
-      ?>
-    </tbody>
-  </table>
-  <hr>
-  <hr>
-  <div style="background-color:gray;color:white;text-align:right">
-  <?php
-    echo 'Current PHP version: ' . phpversion();
-    echo '<br />';
-    echo 'Current MySQL version: ' . mysqli_get_server_info($conn);
-    mysqli_close($conn);
-   ?>
-   </div>
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+      </div>
+      <span class="fa fa-bars menu-icon"></span>
+      <div class="header-right">
+        <a href="#">レッスン</a>
+        <a href="#">新規登録</a>
+        <a href="#" class="login">ログイン</a>
+      </div>
+    </div>
+  </header>
+  <div class="top-wrapper">
+    <div class="container">
+      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
+      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <div class="btn-wrapper">
+        <a href="#" class="btn signup">新規登録はこちら</a>
+        <p>or</p>
+        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
+        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
+      </div>
+    </div>
+  </div>
+  <div class="lesson-wrapper">
+    <div class="container">
+      <div class="heading">
+        <h2>Learn Where to Get Started!</h2>
+      </div>
+      <div class="lessons">
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="https://prog-8.com/images/html/advanced/html.png">
+            <p>HTML & CSS</p>
+          </div>
+          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+            <p>jQuery</p>
+          </div>
+          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="https://prog-8.com/images/html/advanced/ruby.png">
+            <p>Ruby</p>
+          </div>
+          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="https://prog-8.com/images/html/advanced/php.png">
+            <p>PHP</p>
+          </div>
+          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
+        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+  <div class="message-wrapper">
+    <div class="container">
+      <div class="heading">
+        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
+        <h3>Let's learn to code, learn to be creative!</h3>
+      </div>
+      <span class="btn message">さっそく開発する</span>
+    </div>
+  </div>
+  <footer>
+    <div class="container">
+      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
+      <p>Learn to Code, Learn to be Creative.</p>
+    </div>
+  </footer>
 </body>
 </html>
